[gd_scene load_steps=9 format=3 uid="uid://d3xw6xlnx0x1v"]

[ext_resource type="Script" uid="uid://d3o7vnw3b7jib" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="AudioStream" uid="uid://c6qaklmwen15d" path="res://Tracks/placeholder.ogg" id="2_6t5aa"]
[ext_resource type="Texture2D" uid="uid://3kthyf1lfuep" path="res://Sprites/Sprite-0001.png" id="3_6t5aa"]

[sub_resource type="Animation" id="Animation_fkybt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vgqql"]
resource_name = "fade_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.6, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6t5aa"]
resource_name = "fade_white"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 1),
"transitions": PackedFloat32Array(1.03526, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_x3wgy"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3wgy"]
_data = {
&"RESET": SubResource("Animation_fkybt"),
&"fade_black": SubResource("Animation_vgqql"),
&"fade_white": SubResource("Animation_6t5aa"),
&"start": SubResource("Animation_x3wgy")
}

[node name="Player" type="Node2D"]
script = ExtResource("1_cvnsp")

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_6t5aa")
volume_db = -21.073

[node name="Camera2D" type="Camera2D" parent="."]

[node name="StartleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MinDropTimer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[node name="GripBufferTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="DropBufferTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x3wgy")
}

[node name="Fade" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 100
scale = Vector2(2000, 2000)
texture = ExtResource("3_6t5aa")

[connection signal="timeout" from="StartleTimer" to="." method="_on_startle_timer_timeout"]
[connection signal="timeout" from="MinDropTimer" to="." method="_on_min_drop_timer_timeout"]
[connection signal="timeout" from="GripBufferTimer" to="." method="_on_grip_buffer_timer_timeout"]
[connection signal="timeout" from="DropBufferTimer" to="." method="_on_drop_buffer_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
